Add package in pubspec and font

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,34 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # state managemnt
+  flutter_bloc: ^8.1.2
+
+  # comparing dart project
+  equatable: ^2.0.5
+
+  service locator
+  get_it: ^7.6.0
+
+  #data format
+  intl: ^0.18.1
+
+  #database
+  floor: ^1.4.2
+
+  #Hooks
+  flutter_hooks: ^0.18.3
+
+  #chached image
+  cached_network_image: ^3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.0
+  retrofit_generator: ^3.0.1+1
+  floor_generator: ^1.2.0
+  build_runner: ^2.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -75,11 +100,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+    - family: Schyler
+      fonts:
+        - asset: fonts/Schyler-Regular.ttf
+        - asset: fonts/Schyler-Italic.ttf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
